<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
    <include 
	    layout="@layout/add_info_title"
	  	/>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText 
        android:id="@+id/add_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/inputPlayerName"
        android:maxLength="10"
        android:layout_marginTop="20dp"/>
    
    <EditText 
        android:id="@+id/add_player_hight"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLength="3"
        android:inputType="number"
        android:hint="@string/inputPlayerHight"/>
    
    <EditText 
        android:id="@+id/add_player_weight"
        android:inputType="number"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/inputPlayerWeight"
        android:maxLength="3"/>

    <EditText 
    android:id="@+id/add_player_country"
    android:layout_width="match_parent"
    android:singleLine="true"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/inputPlayerCountry"
    android:maxLength="10"/>
    
     <EditText 
        android:id="@+id/add_player_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:maxLength="3"
        android:hint="@string/inputPlayerAge"/>
    
    <EditText 
        android:id="@+id/add_player_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:hint="@string/inputPlayerTel"
        android:maxLength="11"/>

    <EditText 
    android:id="@+id/add_player_role"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:layout_marginTop="20dp"
    android:hint="@string/inputPlayerRole"
    android:maxLength="4"/>
    
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosePosition"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        />
    <Spinner 
        android:id="@+id/playerPositionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/playPosition"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseTeam"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        />
    <Spinner 
        android:id="@+id/teamNameSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
    </ScrollView>
    
	</LinearLayout>    
</LinearLayout>
