<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include 
	    layout="@layout/add_info_title"
	  	/>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
 	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamOneInfo"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:layout_marginTop="16dp"
        />
    <Spinner 
        android:id="@+id/teamOneSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/playPosition"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamTwoInfo"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:layout_marginTop="16dp"
        />
    <Spinner 
        android:id="@+id/teamTwoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/competitionInfo"
        android:singleLine="true"
        android:layout_marginTop="16dp"
        android:paddingLeft="10dp"/>
   
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:paddingLeft="10dp"
    android:singleLine="true"
    android:text="@string/inputHighPlayer"
    />
    <Spinner 
        android:id="@+id/hightPlayerSprinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText 
    android:id="@+id/add_hightScore"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:textSize="16dp"
    android:singleLine="true"
    android:hint="@string/inputHightScore"
    android:inputType="number"
    android:maxLength="2"/>
     
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:singleLine="true"
    android:paddingLeft="10dp"
    android:text="@string/inputAssistingPlayer"
    />
    <Spinner 
       android:id="@+id/assistingPlayerSprinner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       />
    <EditText 
        android:id="@+id/add_assistingScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:hint="@string/inputAssistingScore"
        android:maxLength="2"/>

    <EditText 
    android:id="@+id/add_win_score"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:inputType="number"
    android:singleLine="true"
    android:textSize="16dp"
    android:hint="@string/inputWinScore"
    android:maxLength="2"/>
    
    <EditText 
    android:id="@+id/add_second_score"
    android:layout_width="match_parent"
    android:inputType="number"
    android:textSize="16dp"
    android:layout_height="wrap_content"
    android:singleLine="true"
    android:layout_marginTop="20dp"
    android:hint="@string/inputSecondScore"
    android:maxLength="2"/>
    </LinearLayout>
    </ScrollView>
    
	</LinearLayout>    
</LinearLayout>
