<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >
        
     <EditText 
        android:layout_margin="20dp"
        android:id="@+id/userNameRegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/userName"
        android:maxLength="10"/>
    
    <EditText 
        android:layout_margin="20dp"
        android:id="@+id/userPsdRegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/userPsd"
        android:inputType="textPassword"
        android:maxLength="10"/>
    
    <EditText 
        android:layout_margin="20dp"
        android:id="@+id/userAgeRegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/userAge"
        android:maxLength="10"/>
     
    <EditText 
        android:layout_margin="20dp"
        android:id="@+id/userAddressRegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/userAddress"
        android:maxLength="10"/>
    
    <Button 
        android:id="@+id/addUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:text="@string/register"
        android:background="@drawable/corner_orange"/>
    
    </LinearLayout>
    
</LinearLayout>
