<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.jeff.footballmanager.activity.LoginActivity"
    android:orientation="vertical"
    >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="2">
        <ImageView 
        android:id="@+id/loginIcon"
        android:src="@drawable/login_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:scaleType="fitXY"
        />
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:layout_height="0dp"
    android:layout_weight="1">
        <EditText 
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:drawableLeft="@drawable/user"
        android:singleLine="true"
        android:drawablePadding="15dp"
        />
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:layout_height="0dp"
    android:layout_weight="1">
        <EditText 
        android:id="@+id/userPsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userPsd"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/psd"
        android:drawablePadding="10dp"
        />
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:gravity="center_vertical|left"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
     <CheckBox 
	    android:id="@+id/checkBox"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login"
        />
    </LinearLayout>
    <LinearLayout 
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:layout_height="0dp"
    android:layout_weight="1">
      <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/corner_orange"
        android:textColor="@android:color/white"
        />
    </LinearLayout>
    <LinearLayout 
    android:layout_width="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:layout_height="wrap_content"
    >
      <RelativeLayout 
          android:layout_width="match_parent"
          android:layout_height="match_parent">
        <TextView
        android:id="@+id/remepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remepassword"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/holo_orange_light"
        />
    	<TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/holo_orange_light"
        />
      </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        >
        
        <LinearLayout 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginRight="30dp">
    		
            <TextView 
                android:id="@+id/thirdlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/thirdlogin"
                />
            
            <ImageView 
                android:id="@+id/qqLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:src="@drawable/qq"/>

            <ImageView
                android:id="@+id/weixinLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weixin"
                android:visibility="gone"/>
        </LinearLayout>
       
    </LinearLayout>
    
</LinearLayout>
